--- a/gbplanner/config/smb/planner_control_interface_sim_config.yaml
+++ b/gbplanner/config/smb/planner_control_interface_sim_config.yaml
@@ -1,5 +1,6 @@
 run_mode: kSim
 trigger_mode: kManual
+world_frame_id: map
 robot_type: kGround
 output_type: kAction
 init_motion_enable: false
@@ -8,7 +9,7 @@ smooth_heading_enable: true
 init_motion:
   z_takeoff: 2.5
   z_drop: 1.7
-  x_forward: 3.0
+  x_forward: 1.5
 
 # Group related parameters to be shared between nodes.
 RobotDynamics:
