--- a/gbplanner/config/smb/mgg_simple.yaml
+++ b/gbplanner/config/smb/mgg_simple.yaml
@@ -1,12 +1,12 @@
 RobotParams:
   type:               kGroundRobot
-  size:               [0.8, 0.8, 0.4] # Actual size of the robot in meters [x, y, z]
+  size:               [0.8, 0.8, 0.2] # Actual size of the robot in meters [x, y, z]
   size_extension_min: [0.0, 0.0, 0.0] # minimum extension outside of robot size allowed to operate
-  size_extension:     [0.2, 0.2, 0.1] # maximum extension outside of the robot size
+  size_extension:     [0.2, 0.2, 0.2] # maximum extension outside of the robot size
   center_offset:      [0.0, 0.0, 0.0]
   relax_ratio:        0.5 # Used to define an intermediate size between size_extension_min and size_extension for planning
   bound_mode:         kExtendedBound
-  safety_extension:   [3.0, 3.0, 0.2] # Safety extension outside the bounding box of a path segment used to improve it by pushing it away from obstacles
+  safety_extension:   [2.0, 3.0, 0.2] # Safety extension outside the bounding box of a path segment used to improve it by pushing it away from obstacles
 #-------------------------------------------------------------------------------
 # SENSOR CONFIGURATION
 #  sensor_list: Define a set of sensors relevant to the exploration task.
@@ -22,7 +22,7 @@ SensorParams:
     rotations:      [0.0, 0.0, 0.0]
     fov:            [rad(2.0*pi), rad(pi/6)]
     resolution:     [rad(5.0*pi/180), rad(5.0*pi/180)]
-    frontier_percentage_threshold: 0.04
+    frontier_percentage_threshold: 0.05
 #-------------------------------------------------------------------------------
 # SAMPLING SPACE CONFIGURATION
 #   Global: Strictly defined bounds for the whole environment.
@@ -31,7 +31,7 @@ SensorParams:
 BoundedSpaceParams:
   Global:
     type:           kCuboid
-    min_val:        [-1000.0, -1000.0, -30.0]
+    min_val:        [0.0, -1000.0, -30.0]
     max_val:        [1000.0, 1000.0, 30.0]
   Local:
     type:           kCuboid
@@ -50,9 +50,9 @@ BoundedSpaceParams:
     max_val:        [10.0, 10.0, 0.75]
   GridGraphLocal:
     type: kCuboid
-    min_val:        [-15.0, -15.0, -3.0]
-    max_val:        [15.0, 15.0, 1.5]
-    min_extension:  [0.5, 0.5, 0.1] # Resolution
+    min_val:        [-10.0, -10.0, -1.0]
+    max_val:        [10.0, 10.0, 0.2]
+    min_extension:  [0.5, 0.5, 0.2] # Resolution
 NoGainZones:
   g1:  # Back
     type:           kCuboid
@@ -120,23 +120,23 @@ PlanningParams:
   exp_sensor_list:  ["VLP16"]
   no_gain_zones_list: ["g1"]
   edge_length_min:  0.1
-  edge_length_max:  2.0
+  edge_length_max:  3.0
   edge_overshoot:   0.0 #m
-  num_vertices_max: 800 # 500
-  num_edges_max:    5000 # 5000
+  num_vertices_max: 8000 # 500
+  num_edges_max:    50000 # 5000
   num_loops_cutoff: 2000
   num_loops_max:    200000
-  nearest_range:    0.6 # 2.5
-  nearest_range_z:  0.12
+  nearest_range:    1.0
+  nearest_range_z:  0.51
   nearest_range_min: 0.1 # >= edge_length_min
-  nearest_range_max: 0.6 # <= edge_length_max
+  nearest_range_max: 1.75 # <= edge_length_max
   use_current_state: true
   augment_free_voxels_time: 1
   free_frustum_before_planning: false
 
   use_ray_model_for_volumetric_gain: true
-  path_length_penalty: 0.04
-  path_direction_penalty: 0.2
+  path_length_penalty: 0.07
+  path_direction_penalty: 0.3
   hanging_vertex_penalty: 5.0
   exp_gain_voxel_size: 0.8
   occupied_voxel_gain: 0.0
@@ -145,20 +145,19 @@ PlanningParams:
   nonuniform_ray_cast: true
   ray_cast_step_size_multiplier: 1.0
   freespace_cloud_enable: false
-  leafs_only_for_volumetric_gain: true
+  leafs_only_for_volumetric_gain: false
   cluster_vertices_for_gain: true
-  clustering_radius: 0.2
+  clustering_radius: 0.5
 
-  build_grid_local_graph: false
-
+  build_grid_local_graph: true
   
   max_ground_height: 0.8 # All points will be projected to this height from ground
   robot_height: 0.6  # Height of robot's base frame from ground
-  max_inclination: rad(20.0*pi/180)
+  max_inclination: rad(95.0*pi/180)
   interpolate_projection_distance: false
   
   yaw_tangent_correction: true
-  traverse_length_max: 5.0
+  traverse_length_max: 6.0
   traverse_time_max: 40.0
   path_safety_enhance_enable: true
   path_interpolation_distance: 0.5
@@ -167,8 +166,8 @@ PlanningParams:
   relaxed_corridor_multiplier: 1.5
   homing_backward: false
   auto_homing_enable: true
-  time_budget_limit: 3600 # seconds
-  global_frame_id: world
+  time_budget_limit: 3600 # 3600 seconds
+  global_frame_id: map
   global_path_inclination_check: true
   go_home_if_fully_explored: true
   geofence_checking_enable: true
